fix(ui): Fix for the alignment of image inside tabs content (#646)

--- a/eds/blocks/tabs/tabs.css
+++ b/eds/blocks/tabs/tabs.css
@@ -246,6 +246,7 @@
     }
 
     .tab-content p:last-child picture {
+      block-size: 100%;
       inline-size: 100%;
     }
 
